# mlir-gemmini

./: .clangd  CMakeLists.txt
.github/workflows/: build-and-test.yml
gemmini-opt/: CMakeLists.txt  gemmini-opt.cpp
include/: CMakeLists.txt
include/Conversion/: GemminiToLLVM.h  LinalgToGemmini.h  Passes.h  Passes.td
include/Dialect/Gemmini/: CMakeLists.txt  Gemmini.td  GemminiDialect.h  GemminiDialect.td  GemminiOps.h  GemminiOps.td  GemminiPasses.h  GemminiPasses.td
include/Gemmini/: GemminiDialect.h  GemminiOps.h  GemminiOps.td
include/Gemmini/Dialect/: GemminiDialect.h  GemminiOps.h
include/gemmini/Conversion/: CMakeLists.txt  GemminiToLLVM.h  LinalgToGemmini.h  Passes.h  Passes.td
include/gemmini/Dialect/: CMakeLists.txt  GemminiDialect.h  GemminiOps.h  GemminiOps.td
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/GemminiToLLVM/: CMakeLists.txt  GemminiToLLVM.cpp
lib/Conversion/LinalgToGemmini/: CMakeLists.txt  LinalgToGemmini.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Gemmini/: CMakeLists.txt  GemminiDialect.cpp  GemminiOps.cpp
lib/Dialect/Gemmini/Transforms/: CMakeLists.txt  LayerToTile.cpp
lib/Gemmini/: CMakeLists.txt  GemminiDialect.cpp  GemminiOps.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Gemmini/: dummy.mlir  linalg_to_gemmini.mlir
tools/: gemmini-opt.cpp
